# ArchViz_WebViewer_preprocess

./: .gitignore  MULTI_POLYGON_SUPPORT.md  README.md  REFACTORING.md  pyproject.toml
data/: vrayobjectid_chart_1024.json  vrayobjid_colors_1-2048_map.json  vrayobjid_colors_1-65535_map.json  vrayobjid_colors_65001-65535_map.json  vrayobjid_colors_all_map.json  vrayobjid_colors_all_map_BACKUP.json
maxscript_tools/: PBD_object_g-buff_mapping.ms  PBD_object_viewport_position_extract.ms
src/avwv_preprocess/cli/: colors_from_vrayobjid.py  full_asset_process.py  image_converter_cli.py  objid_to_polygon_cli.py
src/avwv_preprocess/colors_from_vrayobjid/: extract_vray_colors_from_objectIDs.py  pipeline.py  processor.py
src/avwv_preprocess/core/: asset_paths.py  image_io.py  json_io.py  utils.py
src/avwv_preprocess/image_converter/: pipeline.py  processor.py
src/avwv_preprocess/objid_to_polygon/: objID_to_polygon.py  pipeline.py  processor.py
tests/: test1.py
