[project]
name = "avwv-preprocess"
version = "1.0.0"
requires-python = ">=3.12"

dependencies = [
    "numpy>=2.4.6",
    "opencv-python>=4.13",
    "pillow"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]